fixed - horizontal scrolling body content

--- a/styles/desktop/mail.less
+++ b/styles/desktop/mail.less
@@ -275,7 +275,8 @@
 	.message_body {
 		font-size: 11pt;
 		padding: 20px;
-		
+		min-width: fit-content;
+
 		li {
 			margin-bottom: 0.6em;
 		}
